To change the anchor's text

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <input type="text" placeholder="Email or phone number" />
       <input type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
-      <a href="#">Find KaKao Accout or Password</a>
+      <a href="#">Find Kokoa Accout or Password</a>
     </form>
 
     <script
