--- a/chats.html
+++ b/chats.html
@@ -9,7 +9,7 @@
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>No Services </span>
+        <span>No Service </span>
         <i class="fas fa-wifi"></i>
       </div>
 
@@ -38,7 +38,7 @@
         <div class="user-component__column">
           <img
             src="https://seeklogo.com/images/K/kakao-talk-logo-7542043DFC-seeklogo.com.png"
-            class="user-component__avatar user-component__avatar"
+            class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
             <h4 class="user-component__title">KokoaTalk</h4>
