--- a/friends.html
+++ b/friends.html
@@ -50,7 +50,7 @@
             <!--h6 class="user-component__subtitle">Whatever you do</h6>!-->
           </div>
         </div>
-        <!--프로필을 사진과 이름을 포함하는 첫번째 상자-->
+        <!--프로필의 사진과 이름을 포함하는 첫번째 상자-->
         <div class="user-component__column"></div>
         <!--옆에 있다고 가정되는 두번째 상자-->
       </div>
