--- a/chats.html
+++ b/chats.html
@@ -34,31 +34,35 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://seeklogo.com/images/K/kakao-talk-logo-7542043DFC-seeklogo.com.png"
-            class="user-component__avatar user-component__avatar--xl"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">KokoaTalk</h4>
-            <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://seeklogo.com/images/K/kakao-talk-logo-7542043DFC-seeklogo.com.png"
+              class="user-component__avatar user-component__avatar--xl"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">KokoaTalk</h4>
+              <h6 class="user-component__subtitle">
+                Please check My Kokoa Account Info
+              </h6>
+            </div>
           </div>
+          <!--프로필을 사진과 이름을 포함하는 첫번째 상자-->
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
+          </div>
+          <!--옆에 있다고 가정되는 두번째 상자-->
         </div>
-        <!--프로필을 사진과 이름을 포함하는 첫번째 상자-->
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-        <!--옆에 있다고 가정되는 두번째 상자-->
-      </div>
+      </a>
     </main>
 
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="far fa-user fa-2x"></i></i>
+            ><i class="far fa-user fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
