--- a/friends.html
+++ b/friends.html
@@ -110,7 +110,9 @@
         </li>
       </ul>
     </nav>
-
+    <div id="splash-screen">
+      <img src="Screenshots/splash-screen.png" />
+    </div>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="annoymous"
