--- a/friends.html
+++ b/friends.html
@@ -113,6 +113,11 @@
     <div id="splash-screen">
       <img src="Screenshots/splash-screen.png" />
     </div>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="annoymous"
