--- a/more.html
+++ b/more.html
@@ -139,7 +139,7 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your screen is super big ㅠㅠ</span>
+      <span>Your screen is too big 😵</span>
     </div>
 
     <script
