update kokoa-clone project

--- a/chats.html
+++ b/chats.html
@@ -35,7 +35,7 @@
 
     <main class="main-screen">
       <a href="chat.html">
-        <div class="user-component">
+        <div class="user-component chat-user-component">
           <div class="user-component__column">
             <img
               src="https://seeklogo.com/images/K/kakao-talk-logo-7542043DFC-seeklogo.com.png"
@@ -62,24 +62,24 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="far fa-user fa-2x"></i>
+            ><i class="fas fa-snowman fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="fas fa-comment fa-2x"></i>
+            <i class="chats_i fas fa-gifts fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="find.html">
-            <i class="fas fa-search fa-2x"></i>
+            <i class="fas fa-candy-cane fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
             <span class="nav__dot">.</span>
-            <i class="fas fa-ellipsis-h fa-2x"></i>
+            <i class="fas fa-snowflake fa-2x"></i>
           </a>
         </li>
       </ul>
