--- a/friends.html
+++ b/friends.html
@@ -42,16 +42,19 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.0-9/121276746_956198444888425_1845509709616486603_o.jpg?_nc_cat=104&ccb=2&_nc_sid=09cbfe&_nc_ohc=rSAWcoMM3jcAX_wPNaI&_nc_ht=scontent-ssn1-1.xx&oh=2ad9b6583d4c26cceac64c576b64f4bb&oe=5FD2E680"
+            src="https://avatars2.githubusercontent.com/u/38908080?s=460&u=55e505305070595d964279e3c937589d0214ae5a&v=4"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Yang, Seungchan</h4>
+            <h4 class="user-component__title">Catalina</h4>
             <!--h6 class="user-component__subtitle">Whatever you do</h6>!-->
           </div>
         </div>
         <!--프로필의 사진과 이름을 포함하는 첫번째 상자-->
-        <div class="user-component__column"></div>
+        <div class="user-component__column user-profile-music">
+          <i class="fas fa-music fa-sm"></i>
+          시간의 바깥 - 아이유
+        </div>
         <!--옆에 있다고 가정되는 두번째 상자-->
       </div>
       <div class="friends-screen__channel">
@@ -88,30 +91,31 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="fas fa-user fa-2x"></i>
+            ><i class="friends_i fas fa-snowman fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="far fa-comment fa-2x"></i>
+            <i class="fas fa-gifts fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="find.html">
-            <i class="fas fa-search fa-2x"></i>
+            <i class="fas fa-candy-cane fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
             <span class="nav__dot">.</span>
-            <i class="fas fa-ellipsis-h fa-2x"></i>
+            <i class="fas fa-snowflake fa-2x"></i>
           </a>
         </li>
       </ul>
     </nav>
+
     <div id="splash-screen">
-      <img src="Screenshots/splash-screen.png" />
+      <i class="fas fa-comment fa"></i>
     </div>
 
     <div id="no-mobile">
