--- a/settings.html
+++ b/settings.html
@@ -60,6 +60,54 @@
             <span>Latest Version</span>
           </div>
         </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-unlock-alt"></i>
+            <span>Private / Security</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-users"></i>
+            <span>Friend</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-comment"></i>
+            <span>Chat</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fab fa-google"></i>
+            <span>With Google</span>
+          </div>
+          <div class="settings__setting-column">
+            <span>Connected</span>
+          </div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fab fa-facebook"></i>
+            <span>With Facebook</span>
+          </div>
+          <div class="settings__setting-column">
+            <span>Disconnected</span>
+          </div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fab fa-instagram"></i>
+            <span>With Instagram</span>
+          </div>
+          <div class="settings__setting-column">
+            <span>Connected</span>
+          </div>
+        </li>
       </ul>
     </main>
 
@@ -67,24 +115,24 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="far fa-user fa-2x"></i>
+            ><i class="fas fa-snowman fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="far fa-comment fa-2x"></i>
+            <i class="fas fa-gifts fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="find.html">
-            <i class="fas fa-search fa-2x"></i>
+            <i class="fas fa-candy-cane fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
             <span class="nav__dot">.</span>
-            <i class="fas fa-ellipsis-h fa-2x"></i>
+            <i class="fas fa-snowflake fa-2x"></i>
           </a>
         </li>
       </ul>
