--- a/find.html
+++ b/find.html
@@ -116,24 +116,24 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="far fa-user fa-2x"></i>
+            ><i class="fas fa-snowman fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="far fa-comment fa-2x"></i>
+            <i class="fas fa-gifts fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="find.html">
-            <i class="fas fa-search fa-2x"></i>
+            <i class="find_i fas fa-candy-cane fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
             <span class="nav__dot">.</span>
-            <i class="fas fa-ellipsis-h fa-2x"></i>
+            <i class="fas fa-snowflake fa-2x"></i>
           </a>
         </li>
       </ul>
