--- a/chat_nomadcoders.html
+++ b/chat_nomadcoders.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat with KokoaTalk</title>
+    <title>Chat with Nomad Coders</title>
   </head>
   <body id="chat-screen">
     <div class="status-bar">
@@ -28,7 +28,7 @@
         <a href="chats.html"><i class="fas fa-angle-left fa-3x"></i></a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">KokoaTalk</h1>
+        <h1 class="alt-header__title">Nomad Coders</h1>
       </div>
       <div class="alt-header__column">
         <span>
@@ -41,18 +41,46 @@
     </header>
 
     <main class="main-screen main-chat">
-      <div class="chat__timestamp">Tuesdays, June 30, 2020</div>
+      <div class="chat__timestamp">Sunday, November 22, 2020</div>
       <div class="message-row">
         <img
-          src="https://seeklogo.com/images/K/kakao-talk-logo-7542043DFC-seeklogo.com.png"
+          src="https://yt3.ggpht.com/ytc/AAUvwnhrCOwikqUztkKyNeIAmL294wtawA8M6nZlmx9UZA=s900-c-k-c0x00ffffff-no-rj"
         />
         <div class="message-row__content">
-          <span class="message__author">KokoaTalk</span>
+          <span class="message__author">Nomad Coders</span>
           <div class="message__info">
             <span class="message__bubble"
-              >Please check My Kokoa Account Info</span
-            >
-            <span class="message__time">21:27</span>
+              >코코아 클론 2주 완성반 : Assignment12이 나왔습니다
+            </span>
+            <span class="message__time">20:25</span>
+          </div>
+        </div>
+      </div>
+      <div class="message-row">
+        <img
+          src="https://yt3.ggpht.com/ytc/AAUvwnhrCOwikqUztkKyNeIAmL294wtawA8M6nZlmx9UZA=s900-c-k-c0x00ffffff-no-rj"
+        />
+        <div class="message-row__content">
+          <span class="message__author">Nomad Coders</span>
+          <div class="message__info">
+            <span class="message__bubble"
+              >https://nomadcoders.co/c/kokoa-challenge/lobby
+            </span>
+            <span class="message__time">20:25</span>
+          </div>
+        </div>
+      </div>
+      <div class="message-row">
+        <img
+          src="https://yt3.ggpht.com/ytc/AAUvwnhrCOwikqUztkKyNeIAmL294wtawA8M6nZlmx9UZA=s900-c-k-c0x00ffffff-no-rj"
+        />
+        <div class="message-row__content">
+          <span class="message__author">Nomad Coders</span>
+          <div class="message__info">
+            <span class="message__bubble"
+              >까먹지 말고 열심히 하세욧! 화이팅😎
+            </span>
+            <span class="message__time">20:25</span>
           </div>
         </div>
       </div>
@@ -60,8 +88,10 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble"> Okay!</span>
-            <span class="message__time">21:27</span>
+            <span class="message__bubble">
+              선생님... 과제가 너무 어려워요🤣
+            </span>
+            <span class="message__time">21:28</span>
           </div>
         </div>
       </div>
