--- a/friends.html
+++ b/friends.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>21:28</span>
       </div>
       <div class="status-bar__column">
         <span>100%</span>
@@ -28,7 +28,10 @@
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span class="screen-icon__with-red-dot">
+          <span class="red-dot">.</span>
+          <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
+        </span>
       </div>
     </header>
 
@@ -47,13 +50,13 @@
           />
           <div class="user-component__text">
             <h4 class="user-component__title">Catalina</h4>
-            <!--h6 class="user-component__subtitle">Whatever you do</h6>!-->
+            <h6 class="user-component__subtitle">GOD of programming</h6>
           </div>
         </div>
         <!--프로필의 사진과 이름을 포함하는 첫번째 상자-->
         <div class="user-component__column user-profile-music">
           <i class="fas fa-music fa-sm"></i>
-          시간의 바깥 - 아이유
+          <span>뻔한 남자 - 이승기</span>
         </div>
         <!--옆에 있다고 가정되는 두번째 상자-->
       </div>
@@ -84,6 +87,103 @@
           </div>
           <!--옆에 있다고 가정되는 두번째 상자-->
         </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://yt3.ggpht.com/ytc/AAUvwnhrCOwikqUztkKyNeIAmL294wtawA8M6nZlmx9UZA=s900-c-k-c0x00ffffff-no-rj"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Nomad Coders
+              </h4>
+              <h6 class="user-component__subtitle">Let's learn to code!</h6>
+            </div>
+          </div>
+          <!--프로필을 사진과 이름을 포함하는 첫번째 상자-->
+          <div class="user-component__column"></div>
+          <!--옆에 있다고 가정되는 두번째 상자-->
+        </div>
+      </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>Friends 4</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="Screenshots/Ryan.jpg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Ryan
+              </h4>
+              <h6 class="user-component__subtitle">Who I am</h6>
+            </div>
+          </div>
+          <!--프로필을 사진과 이름을 포함하는 첫번째 상자-->
+          <div class="user-component__column"></div>
+          <!--옆에 있다고 가정되는 두번째 상자-->
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="Screenshots/Apeach.jpg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Apeach
+              </h4>
+              <h6 class="user-component__subtitle"></h6>
+            </div>
+          </div>
+          <!--프로필을 사진과 이름을 포함하는 첫번째 상자-->
+          <div class="user-component__column user-profile-music">
+            <i class="fas fa-music fa-sm"></i>
+            <span>Marry You - Bruno Mars</span>
+          </div>
+          <!--옆에 있다고 가정되는 두번째 상자-->
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://pbs.twimg.com/profile_images/711566706951397376/4Icixk8A_400x400.jpg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Frodo
+              </h4>
+              <h6 class="user-component__subtitle">Boring Boring Boring</h6>
+            </div>
+          </div>
+          <!--프로필을 사진과 이름을 포함하는 첫번째 상자-->
+          <div class="user-component__column"></div>
+          <!--옆에 있다고 가정되는 두번째 상자-->
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://lh3.googleusercontent.com/proxy/UjngD0CZT3UEOBLgP6M_FJGj_ivGu2hQEKctky_Kj7hlPnj3qL1uA0jjIip0UvgqFuVjwci4uXOy-uw2m3ZqbsBxRWqSyFOSH6RlpzYPx4OXpwDn4_5bC_T7lOSbwOyeCagJFCzKtS0Y6jq4ILQ-SFhqe2krDw"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Con
+              </h4>
+              <h6 class="user-component__subtitle">:|</h6>
+            </div>
+          </div>
+          <!--프로필을 사진과 이름을 포함하는 첫번째 상자-->
+          <div class="user-component__column user-profile-music">
+            <i class="fas fa-music fa-sm"></i>
+            <span>To Die For - Sam Smith</span>
+          </div>
+          <!--옆에 있다고 가정되는 두번째 상자-->
+        </div>
       </div>
     </main>
 
@@ -96,7 +196,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">5</span>
             <i class="fas fa-gifts fa-2x"></i>
           </a>
         </li>
