--- a/more.html
+++ b/more.html
@@ -39,11 +39,11 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.0-9/121276746_956198444888425_1845509709616486603_o.jpg?_nc_cat=104&ccb=2&_nc_sid=09cbfe&_nc_ohc=rSAWcoMM3jcAX_wPNaI&_nc_ht=scontent-ssn1-1.xx&oh=2ad9b6583d4c26cceac64c576b64f4bb&oe=5FD2E680"
+            src="https://avatars2.githubusercontent.com/u/38908080?s=460&u=55e505305070595d964279e3c937589d0214ae5a&v=4"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Yang, Seungchan</h4>
+            <h4 class="user-component__title">Catalina</h4>
             <h6 class="user-component__subtitle">
               +1 787-493-4219
               <i class="fas fa-exclamation-circle"></i>
@@ -103,9 +103,32 @@
           </div>
           <div class="more-suggestion__icon">
             <div class="more-suggestion__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <img src="Screenshots/Kakao_taxi.png" />
             </div>
-            <span class="more-suggestion_icon-text"> Kokoa Story </span>
+            <span class="more-suggestion_icon-text"> Kokoa Taxi </span>
+          </div>
+        </div>
+      </div>
+
+      <div class="more-suggestion">
+        <h4 class="more-suggestion__title">Today's Weather</h4>
+        <div class="weather-broadcast">
+          <div class="weather-broadcast-column">
+            <i class="fas fa-sun"></i>
+            <span>Sunny</span>
+          </div>
+          <div class="weather-broadcast-column">
+            <span class="weather-broadcast-location">Seoul, Yongsan</span>
+            <div class="weather-broadcast-temp">
+              <div class="weather-broadcast__current">4℃</div>
+              <div class="weather-broadcast__low-high">
+                <span class="weather-broadcast-low-temp">2℃</span>
+                <span class="weather-broadcast-high-temp">8℃</span>
+              </div>
+            </div>
+          </div>
+          <div class="weather-broadcast-column">
+            <i class="fas fa-map-marker-alt fa-lg"></i>
           </div>
         </div>
       </div>
@@ -139,7 +162,7 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your screen is too big 😵 ㅜㅜㅜㅜ</span>
+      <span>Your screen is too big. Try to reduce it.</span>
     </div>
 
     <script
