--- a/chats.html
+++ b/chats.html
@@ -132,7 +132,7 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big. Try to reduce it.</span>
     </div>
 
     <script
