--- a/find.html
+++ b/find.html
@@ -34,20 +34,24 @@
       </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen find-icon-row">
       <div class="icon-row">
         <div class="icon-row__icons">
           <i class="fas fa-qrcode"></i>
           <span>QR Code</span>
         </div>
         <div class="icon-row__icons">
-          <i class="fas fa-address-book"></i><span>Add by Contacts</span>
+          <i class="fas fa-address-book"></i>
+          <span>Add by</span>
+          <span>Contacts</span>
         </div>
         <div class="icon-row__icons">
-          <i class="fas fa-fingerprint"></i><span>Add by ID</span>
+          <i class="fas fa-fingerprint"></i>
+          <span>Add by ID</span>
         </div>
         <div class="icon-row__icons">
-          <i class="far fa-envelope"></i><span>Invite</span>
+          <i class="far fa-envelope"></i>
+          <span>Invite</span>
         </div>
       </div>
       <div class="recommended-friends">
@@ -63,13 +67,11 @@
         </div>
         <div class="open-post">
           <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <h5 class="open-post__title">#Tottenham</h5>
+            <h6 class="open-post__hashtags">#spurs #coys #epl #ucl</h6>
             <div class="open-post__members">
-              <img
-                src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.0-9/121276746_956198444888425_1845509709616486603_o.jpg?_nc_cat=104&ccb=2&_nc_sid=09cbfe&_nc_ohc=rSAWcoMM3jcAX_wPNaI&_nc_ht=scontent-ssn1-1.xx&oh=2ad9b6583d4c26cceac64c576b64f4bb&oe=5FD2E680"
-              />
-              <span class="open-post__members-count">802 members</span>
+              <img src="Screenshots/Harrykane.jpg" />
+              <span class="open-post__members-count">18,262 members</span>
               <div class="divider"></div>
               <span class="open-post__members-status">Active</span>
             </div>
@@ -77,34 +79,30 @@
           <div class="open-post__column">
             <div class="open-post__photo">
               <img
-                src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.0-9/121276746_956198444888425_1845509709616486603_o.jpg?_nc_cat=104&ccb=2&_nc_sid=09cbfe&_nc_ohc=rSAWcoMM3jcAX_wPNaI&_nc_ht=scontent-ssn1-1.xx&oh=2ad9b6583d4c26cceac64c576b64f4bb&oe=5FD2E680"
+                src="https://yt3.ggpht.com/ytc/AAUvwniWmCvWqErL14F1kNa7bgF_xoLOoeISQJ_4IXzfMsU=s900-c-k-c0x00ffffff-no-rj"
               />
               <div class="open-post__heart-count">
-                <i class="fas fa-heart"></i><span> 326 </span>
+                <i class="fas fa-heart"></i><span> 15,225 </span>
               </div>
             </div>
           </div>
         </div>
         <div class="open-post">
           <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <h5 class="open-post__title">#SON</h5>
+            <h6 class="open-post__hashtags">#sonny #lw #niceonesonny</h6>
             <div class="open-post__members">
-              <img
-                src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.0-9/121276746_956198444888425_1845509709616486603_o.jpg?_nc_cat=104&ccb=2&_nc_sid=09cbfe&_nc_ohc=rSAWcoMM3jcAX_wPNaI&_nc_ht=scontent-ssn1-1.xx&oh=2ad9b6583d4c26cceac64c576b64f4bb&oe=5FD2E680"
-              />
-              <span class="open-post__members-count">802 members</span>
+              <img src="Screenshots/Epl.jpg" />
+              <span class="open-post__members-count">56,242 members</span>
               <div class="divider"></div>
               <span class="open-post__members-status">Active</span>
             </div>
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img
-                src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.0-9/121276746_956198444888425_1845509709616486603_o.jpg?_nc_cat=104&ccb=2&_nc_sid=09cbfe&_nc_ohc=rSAWcoMM3jcAX_wPNaI&_nc_ht=scontent-ssn1-1.xx&oh=2ad9b6583d4c26cceac64c576b64f4bb&oe=5FD2E680"
-              />
+              <img src="Screenshots/Son.jpg" />
               <div class="open-post__heart-count">
-                <i class="fas fa-heart"></i><span> 326 </span>
+                <i class="fas fa-heart"></i><span> 47,841 </span>
               </div>
             </div>
           </div>
@@ -140,7 +138,7 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big. Try to reduce it.</span>
     </div>
 
     <script
