--- a/friends.html
+++ b/friends.html
@@ -167,7 +167,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://lh3.googleusercontent.com/proxy/UjngD0CZT3UEOBLgP6M_FJGj_ivGu2hQEKctky_Kj7hlPnj3qL1uA0jjIip0UvgqFuVjwci4uXOy-uw2m3ZqbsBxRWqSyFOSH6RlpzYPx4OXpwDn4_5bC_T7lOSbwOyeCagJFCzKtS0Y6jq4ILQ-SFhqe2krDw"
+              src="Screenshots/Con.jpg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
@@ -219,7 +219,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big. Try to reduce it.</span>
     </div>
 
     <script
