--- a/settings.html
+++ b/settings.html
@@ -139,7 +139,7 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big. Try to reduce it.</span>
     </div>
 
     <script
