Update animation in find screen

--- a/find.html
+++ b/find.html
@@ -29,7 +29,7 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <span class="screen-icon__with-red-dot">
           <span class="red-dot">.</span>
-          <i class="fas fa-cog fa-lg"></i>
+          <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
         </span>
       </div>
     </header>
